--- a/style.css
+++ b/style.css
@@ -2,4 +2,7 @@
     background-image: url("https://images.pexels.com/photos/1097930/pexels-photo-1097930.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
     background-repeat: no-repeat;
     background-attachment: scroll;
+    background-size:cover ;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: multiply;
 }
